--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.application.name=mairie-ticket
+server.port=8088
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/mairie_ticket
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=59898060
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
