--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,8 +34,12 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
+      - name: Wait for Postgres
+        run: |
+          until pg_isready -h localhost -p 5432 -U postgres; do
+            echo "Waiting for Postgres..."
+            sleep 5
+          done
+
       - name: Build with Maven
         run: mvn -B package --file pom.xml
-
-      - name: Update dependency graph
-        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
