--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: Java CI with Maven + Docker
 
 on:
   push:
@@ -43,3 +43,17 @@ jobs:
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+
+      # -------- AJOUT DES ÉTAPES DOCKER --------
+      - name: Log in to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .                   # Dockerfile à la racine
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/mairie-ticket:latest
