--- a/.github/workflows/azure-functions-app-java.yml
+++ b/.github/workflows/azure-functions-app-java.yml
@@ -23,10 +23,12 @@ on:
     branches: ["main"]
 
 env:
-  AZURE_FUNCTIONAPP_NAME: 'your-app-name'   # set this to your function app name on Azure
-  POM_XML_DIRECTORY: '.'                    # set this to the directory which contains pom.xml file
-  DISTRIBUTION: 'zulu'                      # set this to the java version to use (e.g. 'zulu', 'temurin', 'microsoft')
-  JAVA_VERSION: '8'                         # set this to the java version to use (e.g. '8', '11', '17')
+  env:
+    AZURE_FUNCTIONAPP_NAME: 'ticket-function-app'  # nom exact de ton app
+    POM_XML_DIRECTORY: '.'
+    DISTRIBUTION: 'zulu'
+    JAVA_VERSION: '17'
+    # set this to the java version to use (e.g. '8', '11', '17')
 
 jobs:
   build-and-deploy:
